--- a/client/partials/topic_view.html
+++ b/client/partials/topic_view.html
@@ -115,7 +115,10 @@
             <button ng-repeat="f in app.topic.files" type="button" class="btn btn-version" ng-click="app.functions.switch_file($index)" autofocus>{{$index + 1}}</button>
           </div>
           <div data-display-file="app.topic.file"></div>
-          <iframe ng-repeat="f in app.topic.files" src="{{f.key}}" ng-show="app.topic.show_file === $index"></iframe>
+          <div ng-repeat="f in app.topic.files" ng-show="app.topic.show_file === $index" >
+            <iframe ng-src="{{f.key}}" ng-if="f.type === 'pdf'"></iframe>
+            <img ng-src="{{f.key}}" ng-if="f.type === 'img'"/>
+          </div>
         </div>
       </div>
     </div><!-- end left page -->
