--- a/client/css/secondary.css
+++ b/client/css/secondary.css
@@ -377,11 +377,9 @@ nav [type="radio"]:not(:checked) + label:before {
 #left-page {
   margin-top: 30px;
 }
-video {
-  width: 100%;
-  height: 75vh;
-}
-iframe {
+video,
+iframe,
+img {
   width: 100%;
   height: 75vh;
 }
@@ -512,6 +510,15 @@ iframe {
 #slideout_inner .btn i {
   display: flex;
   font-size: 25px;
+}
+#slideout_inner .btn .loader {
+  margin-left: 3px;
+  margin-top: -15px;
+  font-size: 18px;
+  display: inline-block;
+  height: initial;
+  left: 0px;
+  position: relative;
 }
 #slideout:hover #slideout_inner {
   top: -10px;
