--- a/client/css/secondary.less
+++ b/client/css/secondary.less
@@ -456,12 +456,7 @@ nav{
 #left-page{
   margin-top: 30px;
 }
-video{
-  width:100%;
-  height:75vh;
-}
-
-iframe{
+video, iframe, img{
   width:100%;
   height:75vh;
 }
@@ -600,6 +595,15 @@ margin-left: -150px;
         i{
           display: flex;
           font-size: 25px;
+        }
+        .loader{
+              margin-left: 3px;
+              margin-top: -15px;
+              font-size: 18px;
+              display: inline-block;
+              height: initial;
+              left: 0px;
+              position: relative;
         }
       }
 }
