--- a/client/css/splash.css
+++ b/client/css/splash.css
@@ -57,11 +57,13 @@ label .error_msg {
   color: white;
 }
 .login-reg {
+  overflow-y: scroll;
   margin-right: auto;
   margin-left: auto;
   border-radius: 10px;
   padding-top: 2%;
   padding-bottom: 2%;
+  height: 55vh;
   width: 300px;
   background: rgba(55, 55, 55, 0.5);
 }
@@ -81,11 +83,13 @@ label .error_msg {
   width: 150px;
 }
 .reg-container {
+  overflow-y: scroll;
+  display: flex;
   background: rgba(55, 55, 55, 0.5);
   border-radius: 10px;
   margin-left: auto;
   margin-right: auto;
-  height: vmax;
+  height: 95vh;
   width: 40vw;
 }
 .reg-container h3,
@@ -142,6 +146,12 @@ label .error_msg {
 }
 @media screen and (min-width: 300px) and (max-width: 800px) {
   .reg-container {
-    width: 85vw;
+    height: 100vh;
+    width: 90vw;
+  }
+}
+@media screen and (min-height: 400px) and (max-width: 760px) {
+  .reg-container {
+    height: 100%;
   }
 }
