--- a/client/css/splash.less
+++ b/client/css/splash.less
@@ -72,11 +72,13 @@ label{
   color:white;
 }
 .login-reg{
+  overflow-y: scroll;
   margin-right: auto;
   margin-left: auto;
   border-radius:10px;
   padding-top:2%;
   padding-bottom:2%;
+  height:55vh;
   width:300px;
   background: rgba(55,55,55,.5);
 
@@ -103,11 +105,13 @@ label{
 
 //container for registration page form fields
 .reg-container{
+  overflow-y: scroll;
+  display: flex;
   background: rgba(55,55,55,.5);
   border-radius:10px;
   margin-left: auto;
  margin-right: auto;
- height:vmax;
+ height:95vh;
   width:40vw;
   h3, h5{
     text-align: center;
@@ -170,6 +174,17 @@ label{
 
 @media screen and (min-width: 300px) and (max-width: 800px){
     .reg-container{
-      width: 85vw;
+      height: 100vh;
+      width: 90vw;
+    }
+}
+
+@media screen and (min-height: 400px) and (max-width: 760px){
+  // .landing-container{
+  //   position: relative;
+  //   height: 100vmax;
+  // }
+      .reg-container{
+      height: 100%;
     }
 }
